--- a/index.html
+++ b/index.html
@@ -252,8 +252,8 @@
 
     <div class="col-lg-6 col-sm-12 ">
       <div class="row">
-       <div class="col-lg-2 main-6-left-content"><img src="./images/cody_loyd-c885053caab6e551611a18df724fb6b9c8f3a4548668048be0759a8b6d7e74bb.jpg" alt=""></div>
-       <div class="col-lg-10 main-6-right-content">
+       <div class="col-lg-2 col-lg-2main-6-left-content"><img src="./images/cody_loyd-c885053caab6e551611a18df724fb6b9c8f3a4548668048be0759a8b6d7e74bb.jpg" alt=""></div>
+       <div class="col-lg-10 col-lg-10main-6-right-content">
          <div class="main-6-head"><span>Cody Loyd</span></div>
          <div class="main-6-text">TOP was a perfect match for my learning style. Not walking me through an entire project but actually forcing me to figure it out on my own, by pointing me...</div>
        </div>
@@ -275,8 +275,8 @@
 
     <div class="col-lg-6 col-sm-12 ">
       <div class="row">
-       <div class="col-lg-2 main-6-left-content"><img src="./images/skip-ee50be4677383781878c07fa0c6cf523e6151f4988b67b9e8e6666fa12381a0a.jpg" alt=""></div>
-       <div class="col-lg-10 main-6-right-content">
+       <div class="col-lg-2 col-lg-2main-6-left-content"><img src="./images/skip-ee50be4677383781878c07fa0c6cf523e6151f4988b67b9e8e6666fa12381a0a.jpg" alt=""></div>
+       <div class="col-lg-10 col-lg-10 main-6-right-content">
          <div class="main-6-head"><span>Skip Gibson</span></div>
          <div class="main-6-text">TOP was a perfect match for my learning style. Not walking me through an entire project but actually forcing me to figure it out on my own, by pointing me...</div>
        </div>
