--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
 
     <div class="col-lg-6 col-sm-12 ">
       <div class="row">
-       <div class="col-lg-2 col-lg-2main-6-left-content"><img src="./images/skip-ee50be4677383781878c07fa0c6cf523e6151f4988b67b9e8e6666fa12381a0a.jpg" alt=""></div>
+       <div class="col-lg-2 col-lg-2 main-6-left-content"><img src="./images/skip-ee50be4677383781878c07fa0c6cf523e6151f4988b67b9e8e6666fa12381a0a.jpg" alt=""></div>
        <div class="col-lg-10 col-lg-10 main-6-right-content">
          <div class="main-6-head"><span>Skip Gibson</span></div>
          <div class="main-6-text">TOP was a perfect match for my learning style. Not walking me through an entire project but actually forcing me to figure it out on my own, by pointing me...</div>
